kstone-tests/tests/snapshots/snapshot_tests__batch_get_response.snap
---
source: kstone-tests/tests/snapshot_tests.rs
expression: stable
---
found_count: 3
keys_found:
  - item_0
  - item_2
  - item_4
