kstone-tests/tests/snapshots/snapshot_tests__empty_database_stats.snap
---
source: kstone-tests/tests/snapshot_tests.rs
expression: stable_stats
---
has_wal: false
total_sst_files: 0
has_keys: false
