kstone-tests/tests/snapshots/snapshot_tests__error_invalid_path.snap
---
source: kstone-tests/tests/snapshot_tests.rs
expression: error_msg.unwrap_or_default()
---
IO error: No such file or directory (os error 2)
