kstone-tests/tests/snapshots/snapshot_tests__item_with_special_strings.snap
---
source: kstone-tests/tests/snapshot_tests.rs
expression: sorted
---
empty:
  S: ""
newlines:
  S: "line1\nline2\nline3"
quotes:
  S: "He said \"hello\""
spaces:
  S: "  spaces  "
unicode:
  S: Hello 世界 🌍
