kstone-tests/tests/snapshots/snapshot_tests__query_response_empty.snap
---
source: kstone-tests/tests/snapshot_tests.rs
expression: stable_response
---
item_count: 0
has_last_key: false
