kstone-tests/tests/snapshots/snapshot_tests__query_with_limit.snap
---
source: kstone-tests/tests/snapshot_tests.rs
expression: stable_response
---
item_count: 3
has_last_key: true
